# TgMinesweeper

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
include/: engine_export.h
include/Base/: ErrorSuccess.hpp  FileNotFound.hpp  FileSystemError.hpp  IError.hpp  IModule.hpp  ResultOrError.hpp  Types.hpp
include/BotAPI/: IBotAPI.hpp  IKeyboard.hpp  IMessage.hpp  IUser.hpp
include/Engine/: ConVar.hpp  IConVar.hpp  IConsole.hpp  IEngine.hpp  ILaunchArguments.hpp  ITaskManager.hpp
include/FileSystem/: IFile.hpp  IFileSystem.hpp
include/Launcher/: ILauncher.hpp
include/Modules/: Console.hpp  Engine.hpp  Launcher.hpp  TaskManager.hpp
include/Modules/CtrlUI/: CtrlUI.hpp
include/Modules/FileSystem/: File.hpp  FileSystem.hpp
include/Modules/SDL3/: Mutex.hpp  Platform.hpp  Window.hpp
include/Modules/Server/: Field.hpp  Game.hpp  Server.hpp  User.hpp
include/Modules/TgBotAPI/: BotAPI.hpp  Handler.hpp  Keyboard.hpp  Message.hpp  User.hpp
include/Platform/: IMutex.hpp  IPlatform.hpp  IWindow.hpp
include/Server/: IServer.hpp
src/: CMakeLists.txt
src/CtrlUI/: CMakeLists.txt  CtrlUI.cpp  Entry.cpp
src/Engine/: CMakeLists.txt  Console.cpp  Engine.cpp  Entry.cpp  FileNotFound.cpp  TaskManager.cpp
src/FileSystem/: CMakeLists.txt  Entry.cpp  File.cpp  FileSystem.cpp
src/Launcher/: CMakeLists.txt  main.cpp
src/Launcher/DLL/: CMakeLists.txt  Entry.cpp  Launcher.cpp
src/Server/: CMakeLists.txt  Entry.cpp  Field.cpp  Game.cpp  Server.cpp
src/TgBotAPI/: BotAPI.cpp  CMakeLists.txt  Entry.cpp  Keyboard.cpp  Message.cpp  User.cpp
(+5 files in other folders)
